{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "7f34dede-94e7-4cd6-87c1-b42147774914",
            "actions": [
                {
                    "name": "Button1",
                    "type": "Button",
                    "id": "332c7ed3-e892-4f1d-80bb-8bfd731e2224",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button2",
                    "type": "Button",
                    "id": "7bd23343-85ad-4237-9570-f0c49c4c5759",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button3",
                    "type": "Button",
                    "id": "3889eaec-f63f-4fc3-9a59-b7468b6b9856",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button4",
                    "type": "Button",
                    "id": "03a782df-143a-4598-821b-25a8b7800636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28849a95-695d-4236-ab73-04f5dfd4d916",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Button1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4bbd91a-8e95-45b4-8b02-ef7237f4c10c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Button2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b3f7741-b261-459b-8921-ecc6eb93d8ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Button3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7ac36d0-6257-4ba1-b53b-a5014178f020",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Button4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}